--- a/flowers.html
+++ b/flowers.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome To Out Flower Shop</title>
+    <link rel="shortcut icon" href="images/icons.png" type="image/x-icon">
 </head>
 <body>
     <h1>Flowers Shop</h1>
