--- a/order.html
+++ b/order.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome To Out Flower Shop</title>
+    <link rel="shortcut icon" href="images/icon6.png" type="image/x-icon">
     
 </head>
 <body>
