--- a/ordersucces.html
+++ b/ordersucces.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome To Out Flower Shop</title>
+    <link rel="shortcut icon" href="images/icon1.png" type="image/x-icon">
 </head>
 <body>
     <h1>Flower Shop</h1>
@@ -17,7 +18,7 @@
     </p>
     
     <h2>Welcome To Our FlowerShop</h2>
-    <h3>Thanks For Order <br> Your Order Successfull</h3>
+    <h3 class="h3">Thanks For Order <br> Your Order Successfull</h3>
     <br>
     <br>
     <br>
