--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </p>
     
     <h2>Flowers</h2>
-    <ol class="OL">
+    <ol class="ol">
         <li>Malli</li>
         <li>Mulla</li>
         <li>Kakata</li>
