--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
 </head>
 <body>
-    <h1>Flower Shop</h1>
+    <h1>Flowers Shop</h1>
     <p class="text">
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
