--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="images/icons8.png" type="image/x-icon">
 </head>
 <body>
-        <h1>Flower Shop</h1>
+        <h1>Flowers Shop</h1>
         <p class="box">
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
