--- a/order.html
+++ b/order.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <h1>Flower Shop</h1>
+    <h1>Flowers Shop</h1>
     <p class="bar">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
