--- a/ordersucces.html
+++ b/ordersucces.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="images/icon1.png" type="image/x-icon">
 </head>
 <body>
-    <h1>Flower Shop</h1>
+    <h1>Flowers Shop</h1>
 
     <p class="nav">
         <a href="index.html">Home</a>
