--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome To Out Flower Shop</title>
+    <title>Welcome To Our Flower Shop</title>
     <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
 </head>
 <body>
